--- a/index.html
+++ b/index.html
@@ -573,8 +573,8 @@
         }
         
         .header-icon-img {
-            width: 80px;
-            height: 80px;
+            width: 30px;
+            height: 120px;
             margin: 10px 0;
             filter: drop-shadow(0 4px 8px rgba(0,0,0,0.3));
         }
@@ -1907,13 +1907,9 @@
                 <span style="color:#1a5632">Kingu</span>
                 <span style="color:#dc3545">El</span><img src="assets/icons/kingu.svg" alt="Kingu Electrical Icon" class="header-icon-img"><span style="color:#dc3545">ectrical</span><span style="color:#1a5632">Company Limited</span>
             </h1>
-            <p class="tagline" style="color: #DC3545; font-weight: bold; font-style: italic; text-shadow: 
-    1px 1px 0 #fff,
-    -1px -1px 0 #fff,
-    1px -1px 0 #fff,
-    -1px 1px 0 #fff;">
-    Quality Electrical Services with Professional Experience
-</p>
+              <p class="tagline" style="color: #DC3545; font-weight: bold; font-style: italic;">
+                Quality Electrical Services with Professional Experience
+              </p>
             
             <div class="contact-header">
                 <a href="mailto:Kinguelectricaltz@gmail.com">
