--- a/index.html
+++ b/index.html
@@ -165,8 +165,7 @@ update the index.html   here full <!DOCTYPE html>
         }
         
         .welcome-logo {
-            width: 200px;
-            max-width: 80vw; 
+            width: 200px; 
             height: auto;
             margin-bottom: 1.5rem;
             opacity: 0;
@@ -1863,7 +1862,7 @@ update the index.html   here full <!DOCTYPE html>
         <div class="nav-container">
             <a href="#home" class="nav-logo">
                 <svg class="nav-logo-icon" viewBox="0 0 24 24">
-                    <path d="M13 3v10h8V3m-8 18h8V15h-8M3 21h8v-8H3m0-2h8V3H3v8z"/>
+                    <path d="assets/icons/company-logo.png"/>
                 </svg>
                 <span style="color:#1a5632">KINGU</span> 
                 <span style="color:#dc3545">ELECTRICAL</span>
